style: fixed button positioning on small resolutions

--- a/assets/sass/components/_actions.scss
+++ b/assets/sass/components/_actions.scss
@@ -98,7 +98,6 @@ ul.actions {
   ul.actions {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(2, 1fr);
   }
 
   .button {
