--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -2639,8 +2639,6 @@ ul.actions.fit.stacked {
     display: -ms-grid;
     display: grid;
     grid-gap: 10px;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
   }
   .button {
     width: 100%;
